<resources>
    <string name="app_name">TingTingU</string>
    <string name="company">BlackCoffer</string>
    <string name="support_email">aditya.dhiman@blackcoffer.com</string>
    <string name="app_source_url">https://github.com/Chooloo/call_manage</string>
    <string name="app_bug_reporting_url">https://github.com/Chooloo/call_manage/issues</string>
    <string name="donation_link">https://github.com/Chooloo/call_manage/blob/master/README.md#support</string>
    <string name="activity_ongoing_call">Ongoing Call</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reject_call_timer">Reject in</string>
    <string name="action_answer_call_timer">Answer in</string>
    <string name="action_send_sms">Reject and send SMS</string>
    <string name="pref_category_look_and_feel">Look and Feel</string>
    <string name="pref_app_theme_key">app_theme</string>
    <string name="pref_app_theme_title">App Theme</string>
    <string name="pref_app_theme_default_value">light;pink</string>
    <string name="pref_category_call">Call</string>
    <string name="pref_category_pages">Pages</string>
    <string name="pref_category_noise">Noise</string>
    <string name="pref_category_scurity">Security</string>
    <string name="pref_reject_call_timer_key">end_call_timer</string>
    <string name="pref_reject_call_timer_title">End call timer</string>
    <string name="pref_reject_call_timer_default_value">10</string>
    <string name="pref_answer_call_timer_key">answer_call_timer</string>
    <string name="pref_answer_call_timer_title">Answer call timer</string>
    <string name="pref_answer_call_timer_default_value">10</string>
    <string name="pref_default_page_key">default_page</string>
    <string name="pref_default_page_title">Default page</string>
    <string name="pref_default_page_default_value">1</string>
    <string name="pref_is_silent_key">is_silent</string>
    <string name="pref_is_silent_title">Silent</string>
    <string name="pref_is_no_vibrate_key">is_no_vibrate</string>
    <string name="pref_is_no_vibrate_title">Vibrate?</string>
    <string name="pref_is_first_instance_key">first_instance</string>
    <string name="pref_last_version_key">last_version</string>
    <string name="pref_is_biometric_key">is_biometric</string>
    <string name="pref_is_biometric_title">Use Biometrics</string>
    <string name="pref_language_selected_key">language_selected</string>
    <string name="pref_user_mobile_number_key">user_mobile_number</string>
    <string name="pref_user_mobile_number_type_key">user_mobile_number_type</string>
    <string name="pref_user_mobile_number_operator_key">user_mobile_number_operator</string>
    <string name="pref_user_mobile_number_operator_name">user_mobile_number_operator</string>
    <string name="pref_user_mobile_number_circle_key">user_mobile_number_circle</string>
    <string name="pref_is_registered_key">is_registered</string>
    <string name="pref_user_selected_language_key">user_selected_language</string>
    <string name="pref_is_login_key">is_login</string>
    <string name="pref_user_token_value">user_token_value</string>
    <string name="pref_user_user_id">user_user_id</string>
    <string name="pref_refer_code_key">refer_code</string>
    <string name="pref_c_upload_date">uplodate_date</string>
    <string name="pref_profile_path">profile_path</string>
    <string name="pref_image_path">image_path</string>
    <string name="pref_image_path_Draft">draft_image_path</string>
    <string name="pref_is_language_selected_key">is_language_selected</string>
    <string name="pref_is_otp_verify_key">is_otp_verify</string>
    <string name="pref_is_operator_detail_filled_key">is_operator_detail_filled</string>
    <string name="pref_is_registered_step_one_key">is_registered_step_one</string>
    <string name="pref_is_registered_step_two_key">is_registered_step_two</string>
    <string name="pref_is_registered_name_value">registered_name_value</string>
    <string name="pref_is_registered_age_value">registered_age_value</string>
    <string name="pref_is_registered_gender_value">registered_gender_value</string>
    <string name="pref_is_registered_state_value">registered_state_value</string>
    <string name="pref_is_registered_city_value">registered_city_value</string>
    <string name="pref_is_registered_pincode">registered_pincod</string>
    <string name="pref_is_registered_step_two_email_value">registered_step_two_email</string>
    <string name="pref_is_registered_step_two_language_value">registered_step_two_language</string>
    <string name="pref_is_registered_step_two_education_value">registered_step_two_education</string>
    <string name="pref_is_registered_step_two_profession_value">registered_step_two_profession</string>
    <string name="pref_daily_threshold_value">daily_threshold</string>
    <string name="pref_referrer_reward_days">referrerRewardDays</string>
    <string name="pref_referrer_points">referrerPoints</string>
    <string name="pref_referee_points">refereePoints</string>
    <string name="pref_recharge_select_operator_name">recharge_select_operator</string>
    <string name="pref_recharge_select_dth_operator_name">recharge_select_dth_operator</string>
    <string name="arg_list_id">list_id</string>
    <string name="status_call_disconnected">Call ended</string>
    <string name="status_call_incoming">Incoming Call…</string>
    <string name="status_call_active">Call in progress</string>
    <string name="status_call_dialing">Dialing…</string>
    <string name="status_call_holding">Call On Hold</string>
    <string name="hint_path">Path</string>
    <string name="hint_name">Name</string>
    <string name="hint_name_column">Name column</string>
    <string name="hint_number_column">Number column</string>
    <string name="hint_phone_number">phone number</string>
    <string name="error_name">Must be a non empty string</string>
    <string name="error_column_index">Must be a valid integer</string>
    <string name="dialog_folder_up">Up</string>
    <string name="dialog_columns_info">Enter the columns\' indices where the following contacts\' fields are in:</string>
    <string name="dialog_long_click_cgroup_title">What would you like to do?</string>
    <string name="dialog_changelog_title">Changelog</string>
    <string name="empty_cgroups_title">Nothing here… yet</string>
    <string name="empty_cgroups_desc">You can try to add something</string>
    <string name="empty_contact_title">No contact matching search query found</string>
    <string name="empty_contact_desc" />
    <string name="empty_recents_title">No recent calls</string>
    <string name="empty_recents_desc" />
    <string name="about_version_title">Version</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_source_title">Github Source</string>
    <string name="about_email_title">Write an Email</string>
    <string name="about_roei_title">Roei Edri</string>
    <string name="about_ido_title">Ido Fang Bentov</string>
    <string name="about_support_title">Support</string>
    <string name="about_bugs_title">Report Bugs</string>
    <string name="about_bugs_desc">Report any issues or request new features on our GitHub page.</string>
    <string name="about_rate_title">Rate</string>
    <string name="about_rate_desc">If you like the app, leave a positive feedback.</string>
    <string name="about_donate_desc">If you think we deserve to get paid for our work, leave a few dollars here.</string>
    <string name="about_donate_title">Donate</string>
    <string name="name_unknown">Unknown</string>
    <string name="reject_timer_indicator">Call ends in</string>
    <string name="answer_timer_indicator">Answering in</string>
    <string name="dialpad_0_number">0</string>
    <string name="dialpad_1_number">1</string>
    <string name="dialpad_2_number">2</string>
    <string name="dialpad_3_number">3</string>
    <string name="dialpad_4_number">4</string>
    <string name="dialpad_5_number">5</string>
    <string name="dialpad_6_number">6</string>
    <string name="dialpad_7_number">7</string>
    <string name="dialpad_8_number">8</string>
    <string name="dialpad_9_number">9</string>
    <string name="dialpad_star_number">*</string>
    <string name="dialpad_pound_number">#</string>
    <string name="dialpad_0_letters">+</string>
    <string name="dialpad_1_letters">Voicmail</string>
    <string name="dialpad_2_letters">ABC</string>
    <string name="dialpad_3_letters">DEF</string>
    <string name="dialpad_4_letters">GHI</string>
    <string name="dialpad_5_letters">JKL</string>
    <string name="dialpad_6_letters">MNO</string>
    <string name="dialpad_7_letters">PQRS</string>
    <string name="dialpad_8_letters">TUV</string>
    <string name="dialpad_9_letters">WXYZ</string>
    <string name="dialpad_star_letters"></string>
    <string name="dialpad_pound_letters"></string>
    <string name="fingerprint_title">Biometric login</string>
    <string name="fingerprint_message">Log in using your biometric credential</string>
    <string name="password_title">Password Login</string>
    <string name="password_message">Log in with your password</string>
    <string name="cancel_button">Cancel</string>
    <string name="login_otp_statement">We will send you a one-time password(OTP) by sms to
        verify your phone number</string>
    <string name="login_mob">Your Mobile Number</string>
    <string name="loging_refercode">Referral code if you have any</string>
    <string name="login_privacypolicy">By signing up you agree to the Privacy Policy and Terms of use</string>
    <string name="login_btn_otp">Agree and Continue</string>
    <string name="otp_enter_statement">Enter the 4-digit code sent to you to at</string>
    <string name="otp_tv_resend">Resend OTP in </string>
    <string name="otp_resend_btn">Resend OTP </string>
    <string name="reg_age">Age</string>
    <string name="registration">Registration</string>
    <string name="reg_mob">Your Mobile Number</string>
    <string name="reg_fullname">Full Name</string>
    <string name="reg_gender">Gender</string>
    <string name="reg_state">State</string>
    <string name="reg_city">City</string>
    <string name="reg_email">Email (optional)</string>
    <string name="reg_pincode">Pin Code</string>
    <string name="reg_lang">Language(Read and Understand)</string>
    <string name="reg_professin">Profession (Optional)</string>
    <string name="reg_next">Next</string>
    <string name="reg_regist_now">Register Now</string>
    <string name="reg_provide">Provide Later</string>
    <string name="operator_statement">Please provide operator details to get free recharge benefits</string>
    <string name="operator_change">Change Operator</string>
    <string name="operator_btn">Continue</string>
    <string name="operator_prepaid">Prepaid</string>
    <string name="operator_postpaid">Postpaid</string>
    <string name="operator_select">Select an operator</string>
    <string name="operator_home_wallet_balance">Wallet Balance</string>
    <string name="operator_home_point">Points</string>
    <string name="registration_congo">Congratulations \n Registration \n Completed \n Successfully!</string>
    <string name="registration_congo_btn_later">Open Later</string>
    <string name="registration_congo_btn_now">Open Now</string>
    <string name="reg_optional_update">Update Optional Profile</string>
    <string name="temporary_disable_services">Temporary Disable Services</string>
    <string name="days">Days</string>
    <string name="change_mobile_operator">Change Mobile Operator</string>
    <string name="change_plan_type_prepaid_postpaid">Change Plan Type(Prepaid/Postpaid)</string>
    <string name="change_language_for_ttu_application">Change Language For TTU Application</string>
</resources>