<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.fragment.login.CongoRegistrartionFragment">

        <ImageView
            android:id="@+id/image_gif"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/darkblue"
            android:text="@string/registration_congo"
            android:textAlignment="center"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:weightSum="2"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_open_later"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/darkblue"
                android:textColor="@color/white"
                android:text="@string/registration_congo_btn_later"/>

            <Button
                android:id="@+id/btn_open_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/darkblue"
                android:textColor="@color/white"
                android:text="@string/registration_congo_btn_now"/>

        </LinearLayout>

    </RelativeLayout>


</layout>
