<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SettingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/tv_temporary_disable"
                android:text="@string/temporary_disable_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <Switch
                android:id="@+id/switch_temporary_disable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_temporary_min"
                android:text="1"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/seek_bar_temporary_disable"/>

            <TextView
                android:id="@+id/tv_temporary_max"
                android:text="10"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/seek_bar_temporary_disable"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seek_bar_temporary_disable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:max="10"
                app:layout_constraintTop_toBottomOf="@id/tv_temporary_disable"/>

            <TextView
                android:id="@+id/tv_days"
                android:text="@string/days"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seek_bar_temporary_disable"/>

            <View
                android:id="@+id/line_one"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/tv_days"/>

            <TextView
                android:id="@+id/tv_change_operator_heading"
                android:text="@string/change_mobile_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_one"/>

            <TextView
                android:id="@+id/tv_change_operator_sub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_change_operator_heading"/>

            <ImageView
                android:id="@+id/iv_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/jioicon"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/line_one"/>

            <View
                android:id="@+id/line_two"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/tv_change_operator_sub_heading"/>

            <TextView
                android:id="@+id/tv_change_plan_type"
                android:text="@string/change_plan_type_prepaid_postpaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_two"/>

            <TextView
                android:id="@+id/tv_change_plan_type_sub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_change_plan_type"/>

            <View
                android:id="@+id/line_three"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/tv_change_plan_type_sub_heading"/>


            <TextView
                android:id="@+id/tv_change_language"
                android:text="@string/change_language_for_ttu_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_three"/>

            <TextView
                android:id="@+id/tv_change_language_sub_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_change_language"/>

            <View
                android:id="@+id/line_four"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_line"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/tv_change_language_sub_heading"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
