<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorScreenBackground"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context="com.kabaladigital.tingtingu.ui.fragment.login.EnterOtpFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/otp_enter_statement"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tx_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginEnd="32dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_otp_1"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/grey_dark"
                android:text=""
                android:textColor="@color/blue"
                android:textAlignment="center"
                android:inputType="number"
                android:lines="1"
                android:maxLength="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_otp_2"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/grey_dark"
                android:textAlignment="center"
                android:text=""
                android:textColor="@color/blue"
                android:inputType="number"
                android:lines="1"
                android:maxLength="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_otp_3"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/grey_dark"
                android:textAlignment="center"
                android:text=""
                android:textColor="@color/blue"
                android:inputType="number"
                android:lines="1"
                android:maxLength="1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ed_otp_4"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:backgroundTint="@color/grey_dark"
                android:textAlignment="center"
                android:text=""
                android:textColor="@color/blue"
                android:inputType="number"
                android:lines="1"
                android:maxLength="1"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_resend_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/otp_tv_resend"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_otp_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="00.00"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_re_otp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:padding="5dp"
                android:background="@color/grey_dark"
                android:textAllCaps="false"
                android:text="@string/otp_resend_btn"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/float_btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/otpsend_btn"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

    </LinearLayout>

</layout>